exceptions.log
2022-06-10T05:47:17.781Z [[31merror[39m]: uncaughtException: Configuration property "d" is not defined
Error: Configuration property "d" is not defined
    at Config.get (/Users/michaelbarr/programming/mispartituras-nodejs/node_modules/config/lib/config.js:182:11)
    at default (file:///Users/michaelbarr/programming/mispartituras-nodejs/startup/db.js:6:27)
    at file:///Users/michaelbarr/programming/mispartituras-nodejs/index.js:6:1
    at ModuleJob.run (node:internal/modules/esm/module_job:198:25)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:385:24)
    at async loadESM (node:internal/process/esm_loader:88:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)
2022-06-13T16:57:37.228Z [[31merror[39m]: uncaughtException: Unexpected token 'export'
/Users/michaelbarr/programming/mispartituras-nodejs/startup/routes.js:3
export default (app) => {
^^^^^^

SyntaxError: Unexpected token 'export'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/michaelbarr/programming/mispartituras-nodejs/index.js:4:16)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-06-13T16:58:07.908Z [[31merror[39m]: uncaughtException: Unexpected token 'export'
/Users/michaelbarr/programming/mispartituras-nodejs/routes/parts.js:8
export default router;
^^^^^^

SyntaxError: Unexpected token 'export'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/michaelbarr/programming/mispartituras-nodejs/startup/routes.js:1:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-06-13T16:58:15.540Z [[31merror[39m]: uncaughtException: Unexpected token 'export'
/Users/michaelbarr/programming/mispartituras-nodejs/routes/parts.js:8
export default router;
^^^^^^

SyntaxError: Unexpected token 'export'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/michaelbarr/programming/mispartituras-nodejs/startup/routes.js:1:15)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-06-13T16:58:33.276Z [[31merror[39m]: uncaughtException: Unexpected token 'export'
/Users/michaelbarr/programming/mispartituras-nodejs/startup/db.js:5
export default function () {
^^^^^^

SyntaxError: Unexpected token 'export'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/Users/michaelbarr/programming/mispartituras-nodejs/index.js:5:12)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-06-13T17:03:15.646Z [[31merror[39m]: uncaughtException: listen EADDRINUSE: address already in use :::3000
Error: listen EADDRINUSE: address already in use :::3000
    at Server.setupListenHandle [as _listen2] (node:net:1372:16)
    at listenInCluster (node:net:1420:12)
    at Server.listen (node:net:1508:7)
    at Function.listen (/Users/michaelbarr/programming/mispartituras-nodejs/node_modules/express/lib/application.js:635:24)
    at Object.<anonymous> (/Users/michaelbarr/programming/mispartituras-nodejs/index.js:10:20)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
